# diffusion

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: default.yml  test.yml  train.yml
scripts/: test.sh  train.sh
src/diffusion/: diffusion.py  test.py  train.py
src/diffusion/data/: datasets.py
src/diffusion/models/: attention.py  unet.py
src/diffusion/training/: trainer.py
src/diffusion/utils/: time_embedding.py  visualization.py
